<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DevelopedBy">

    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/yemeinhu"
        android:contentDescription="@string/bg_image_of_me" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cover"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/me"
        android:contentDescription="@string/image_of_me" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginLeft="8sp"
        android:layout_marginTop="8sp"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/cover" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:text="@string/batch"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:text="@string/sourav_thakur"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/cover" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:text="@string/_2017_2021"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <ImageView
        android:id="@+id/github_icon"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="144dp"
        android:src="@drawable/github_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="164sp"
        android:text="@string/souravthakur12"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/github_icon"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/instagram_icon"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/instagram_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/github_icon"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="56sp"
        android:text="@string/souravthakur12"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/instagram_icon"
        app:layout_constraintTop_toBottomOf="@+id/github" />

    <ImageView
        android:id="@+id/fb_icon"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/facebook_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instagram_icon"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="56sp"
        android:text="@string/sourav_thakur"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/fb_icon"
        app:layout_constraintTop_toBottomOf="@+id/instagram" />

</androidx.constraintlayout.widget.ConstraintLayout>